[gd_scene load_steps=19 format=4 uid="uid://by7viw8nvjhc2"]

[ext_resource type="Script" uid="uid://fdcufumcdlsm" path="res://scripts/main.gd" id="1_uccuh"]
[ext_resource type="Texture2D" uid="uid://6cu8nm4u2o8i" path="res://assets/golf_tileset/OutdoorsTileset.png" id="2_it2tc"]
[ext_resource type="Texture2D" uid="uid://cxwlw864r4uro" path="res://assets/golf_tileset/hole.png" id="3_8ugli"]
[ext_resource type="PackedScene" uid="uid://bf78n1pfs1uby" path="res://scenes/inGameUI.tscn" id="4_it2tc"]
[ext_resource type="PackedScene" uid="uid://p6txftwmrpeh" path="res://scenes/ball_player.tscn" id="4_jol72"]
[ext_resource type="Texture2D" uid="uid://paxoa2xfdiu8" path="res://assets/golf_tileset/animated_water.png" id="4_jsqv3"]
[ext_resource type="Script" uid="uid://bam4sneruv47s" path="res://scripts/ball_player.gd" id="5_sps47"]
[ext_resource type="Script" uid="uid://bwbi4j4edpwhs" path="res://scripts/camera_shake.gd" id="5_t75r2"]
[ext_resource type="AudioStream" uid="uid://dabn6wdx6y0yj" path="res://assets/audio_sounds/drip.mp3" id="8_v67rb"]
[ext_resource type="AudioStream" uid="uid://tysma0ppy3bg" path="res://assets/audio_sounds/blub.mp3" id="9_5xkst"]
[ext_resource type="AudioStream" uid="uid://tq0i5kx7at5l" path="res://assets/audio_sounds/splash.mp3" id="10_t75r2"]
[ext_resource type="AudioStream" uid="uid://dkihw52ri15at" path="res://assets/audio_sounds/cup.mp3" id="11_ue1iy"]
[ext_resource type="AudioStream" uid="uid://ckreaonq78xrx" path="res://assets/audio_sounds/goku.mp3" id="12_wrml1"]
[ext_resource type="AudioStream" uid="uid://b55f1kv5gg1s5" path="res://assets/audio_sounds/bonk.mp3" id="13_5xkst"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v67rb"]
texture = ExtResource("2_it2tc")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0.539577, 3.41732, 0.899294, 0.179859, 3.95689, 0.179859, 8, 8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -0.899294, 8, -0.719435, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.359718, 8, -1.43887, 3.41732, -4.13675, 0.359718, -8, -0.359716, -8, 8)
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.899294, -8, -0.719435, 8, 8, 8, 8, -8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.719435, -8, 0.899294, 8, -8, 8, -8, -8)
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.359716, -8, 0.719435, -3.95689, 4.13675, -0.359716, 8, -0.539576, 8, -8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.719435, -8, 0.899294)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -0.539576, -3.77703, -1.25901, -0.539576, -4.31661, 0, -8, -8, -8)
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
1:7/0/custom_data_0 = true
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5xkst"]
texture = ExtResource("3_8ugli")
0:0/0 = 0
0:0/0/custom_data_1 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t75r2"]
texture = ExtResource("4_jsqv3")
0:0/animation_columns = 5
0:0/animation_frame_0/duration = 0.3
0:0/animation_frame_1/duration = 0.3
0:0/animation_frame_2/duration = 0.3
0:0/animation_frame_3/duration = 0.3
0:0/animation_frame_4/duration = 0.3
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_5xkst"]
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = "waterDeath"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "holeWin"
custom_data_layer_1/type = 1
sources/0 = SubResource("TileSetAtlasSource_v67rb")
sources/1 = SubResource("TileSetAtlasSource_5xkst")
sources/3 = SubResource("TileSetAtlasSource_t75r2")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_uccuh")

[node name="WaterLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAXAAsAAAABAAcAAAACAAsAAAABAAcAAAAWAAwAAAABAAcAAAAHAAoAAAABAAcAAAALAAEAAAABAAcAAAATAAEAAAABAAcAAAAWAAUAAAABAAcAAAADAAIAAAABAAcAAAAMAAIAAAABAAcAAAAKAAgAAAABAAcAAAAUAAMAAAABAAcAAAAUAAIAAAABAAcAAAAUAAEAAAABAAcAAAAUAAAAAAABAAcAAAATAAAAAAABAAcAAAASAAAAAAABAAcAAAARAAAAAAABAAcAAAAQAAAAAAABAAcAAAAPAAAAAAABAAcAAAAOAAAAAAABAAcAAAANAAAAAAABAAcAAAAMAAAAAAABAAcAAAALAAAAAAABAAcAAAAKAAAAAAABAAcAAAAJAAAAAAABAAcAAAAIAAAAAAABAAcAAAAHAAAAAAABAAcAAAAFAAAAAAABAAcAAAAEAAAAAAABAAcAAAADAAAAAAABAAcAAAACAAAAAAABAAcAAAABAAAAAAABAAcAAAAAAAAAAAABAAcAAAAAAAEAAAABAAcAAAAAAAIAAAABAAcAAAAAAAMAAAABAAcAAAAAAAQAAAABAAcAAAAAAAUAAAABAAcAAAAAAAYAAAABAAcAAAAAAAcAAAABAAcAAAAAAAgAAAABAAcAAAAAAAkAAAABAAcAAAAAAAoAAAABAAcAAAAAAAsAAAABAAcAAAAAAAwAAAABAAcAAAAAAA0AAAABAAcAAAABAA0AAAABAAcAAAABAAwAAAABAAcAAAABAAsAAAABAAcAAAABAAoAAAABAAcAAAABAAkAAAABAAcAAAABAAgAAAABAAcAAAABAAcAAAABAAcAAAABAAYAAAABAAcAAAABAAUAAAABAAcAAAABAAQAAAABAAcAAAABAAMAAAABAAcAAAABAAIAAAABAAcAAAABAAEAAAABAAcAAAACAAEAAAABAAcAAAACAAIAAAABAAcAAAACAAMAAAABAAcAAAACAAQAAAABAAcAAAACAAUAAAABAAcAAAACAAYAAAABAAcAAAACAAcAAwAAAAAAAAACAAgAAAABAAcAAAACAAkAAAABAAcAAAACAAoAAAABAAcAAAADAAoAAAABAAcAAAADAAkAAAABAAcAAAADAAgAAAABAAcAAAADAAcAAAABAAcAAAADAAYAAAABAAcAAAADAAUAAAABAAcAAAADAAQAAAABAAcAAAADAAMAAAABAAcAAAAEAAMAAAABAAcAAAAEAAIAAAABAAcAAAAEAAEAAAABAAcAAAADAAEAAAABAAcAAAAFAAEAAAABAAcAAAAFAAIAAAABAAcAAAAFAAMAAAABAAcAAAAFAAQAAAABAAcAAAAEAAQAAAABAAcAAAAHAAEAAAAEAAcAAAAHAAIAAAAAAAcAADAHAAMAAAACAAcAAAAHAAQAAAACAAcAAAAIAAEAAAABAAgAAAAJAAEAAAADAAcAAAAJAAIAAAACAAcAADAJAAMAAAAAAAgAAAAKAAMAAAABAAgAAAAKAAIAAAABAAcAAAAKAAEAAAABAAcAAAALAAIAAAABAAcAAAALAAMAAAADAAcAAAAMAAMAAAABAAcAAAANAAMAAAABAAcAAAANAAIAAAABAAcAAAANAAEAAAABAAcAAAAMAAEAAAABAAcAAAAOAAEAAAABAAcAAAAOAAIAAAABAAcAAAAOAAMAAAABAAcAAAAPAAMAAAABAAcAAAAPAAIAAAABAAcAAAAPAAEAAAABAAcAAAAQAAEAAwAAAAAAAAAQAAIAAAABAAcAAAAQAAMAAAABAAcAAAARAAMAAAABAAcAAAARAAIAAAABAAcAAAARAAEAAAABAAcAAAASAAEAAAABAAcAAAASAAIAAAABAAcAAAASAAMAAAABAAcAAAATAAMAAAABAAcAAAATAAIAAAABAAcAAAAEAAgAAAABAAcAAAAEAAkAAAABAAcAAAAEAAoAAAABAAcAAAAEAAsAAAABAAcAAAADAAsAAAABAAcAAAADAAwAAAABAAcAAAACAAwAAAABAAcAAAACAA0AAAABAAcAAAADAA0AAAABAAcAAAAEAA0AAAABAAcAAAAEAAwAAAABAAcAAAAFAAwAAAABAAcAAAAFAAsAAAABAAcAAAAFAAoAAAABAAcAAAAFAAkAAAABAAcAAAAFAAgAAAABAAcAAAAGAAgAAAABAAcAAAAGAAkAAAABAAcAAAAGAAoAAAABAAcAAAAGAAsAAAABAAcAAAAGAAwAAAABAAcAAAAGAA0AAAABAAcAAAAFAA0AAAABAAcAAAAHAA0AAAABAAcAAAAHAAwAAAABAAcAAAAHAAsAAwAAAAAAAAAIAAsAAAABAAcAAAAIAAoAAAABAAcAAAAIAAkAAAABAAcAAAAIAAgAAAABAAcAAAAHAAgAAAABAAcAAAAHAAkAAAABAAcAAAAJAAgAAAABAAcAAAAJAAkAAAABAAcAAAAJAAoAAAABAAcAAAAJAAsAAAABAAcAAAAJAAwAAAABAAcAAAAIAAwAAAABAAcAAAAIAA0AAAABAAcAAAAJAA0AAAABAAcAAAAKAA0AAAABAAcAAAAKAAwAAAABAAcAAAAKAAsAAAABAAcAAAAKAAoAAAABAAcAAAAKAAkAAAABAAcAAAALAAoAAAABAAcAAAALAAsAAAABAAcAAAALAAwAAAABAAcAAAALAA0AAAABAAcAAAAMAA0AAAABAAcAAAAMAAwAAAABAAcAAAAMAAsAAAABAAcAAAAMAAoAAAABAAcAAAANAA0AAAABAAcAAAAOAA0AAAABAAcAAAAPAAwAAAABAAcAAAAQAAwAAAABAAcAAAAQAA0AAAABAAcAAAAPAA0AAAABAAcAAAARAA0AAAABAAcAAAARAAwAAAABAAcAAAASAAsAAAABAAcAAAASAAwAAAABAAcAAAASAA0AAAABAAcAAAATAA0AAAABAAcAAAATAAwAAAABAAcAAAATAAsAAAABAAcAAAATAAoAAAABAAcAAAATAAkAAAABAAcAAAAUAAkAAAABAAcAAAAUAAoAAAABAAcAAAAUAAsAAAABAAcAAAAUAAwAAwAAAAAAAAAUAA0AAAABAAcAAAAVAA0AAAABAAcAAAAVAAwAAAABAAcAAAAVAAsAAAABAAcAAAAVAAoAAAABAAcAAAAVAAkAAAABAAcAAAAVAAgAAAABAAcAAAAVAAcAAAABAAcAAAAVAAYAAAABAAcAAAAVAAUAAwAAAAAAAAAVAAQAAAABAAcAAAAVAAMAAAABAAcAAAAVAAIAAAABAAcAAAAVAAEAAAABAAcAAAAVAAAAAAABAAcAAAAWAAAAAAABAAcAAAAWAAEAAAABAAcAAAAWAAIAAAABAAcAAAAWAAMAAAABAAcAAAAWAAQAAAABAAcAAAAXAAQAAAABAAcAAAAXAAMAAAABAAcAAAAXAAIAAAABAAcAAAAXAAEAAAABAAcAAAAXAAAAAAABAAcAAAAXAAUAAAABAAcAAAAXAAYAAAABAAcAAAAWAAYAAAABAAcAAAAWAAcAAAABAAcAAAAWAAgAAAABAAcAAAAWAAkAAAABAAcAAAAWAAoAAAABAAcAAAAWAAsAAAABAAcAAAAXAAoAAAABAAcAAAAXAAkAAAABAAcAAAAXAAgAAAABAAcAAAAXAAcAAAABAAcAAAAWAA0AAAABAAcAAAAXAA0AAAABAAcAAAAXAAwAAAABAAcAAAAEAAUAAAABAAcAAAAEAAYAAAABAAcAAAAEAAcAAAABAAcAAAAFAAYAAAABAAcAAAAFAAUAAAABAAcAAAAFAAcAAAABAAcAAAAGAAcAAAABAAcAAAAHAAUAAAAEAAYAAAAHAAYAAAABAAcAAAAHAAcAAAABAAcAAAAIAAcAAAABAAcAAAALAAQAAAAAAAcAAAAMAAQAAAABAAcAAAANAAQAAAABAAcAAAAOAAQAAAABAAcAAAAPAAQAAAABAAcAAAAQAAQAAAABAAcAAAARAAQAAAABAAcAAAASAAQAAAABAAcAAAATAAQAAAABAAcAAAAUAAUAAAABAAcAAAAUAAYAAAABAAcAAAAUAAQAAAABAAcAAAATAAYAAAABAAcAAAATAAcAAAABAAcAAAATAAgAAAABAAcAAAAUAAgAAAABAAcAAAAUAAcAAAABAAcAAAASAAYAAAABAAcAAAASAAUAAAABAAcAAAATAAUAAAABAAcAAAASAAcAAAABAAcAAAARAAcAAAABAAcAAAARAAYAAAABAAcAAAARAAUAAAABAAcAAAAQAAUAAAABAAcAAAAPAAUAAAABAAcAAAAIAAUAAAABAAYAAAAIAAYAAAABAAcAAAAGAAAAAAABAAcAAAAGAAEAAAABAAcAAAAGAAIAAAABAAcAAAAGAAMAAAABAAcAAAAGAAQAAAABAAcAAAAGAAUAAAABAAcAAAAGAAYAAAABAAcAAAANAAwAAAABAAcAAAAOAAwAAAABAAcAAAASAAoAAAABAAcAAAASAAkAAAABAAcAAAASAAgAAAABAAcAAAARAAgAAAABAAcAAAAQAAgAAAABAAcAAAAQAAcAAAABAAcAAAAQAAYAAAABAAcAAAAPAAYAAAABAAcAAAAOAAYAAAABAAcAAAAOAAUAAAABAAcAAAAJAAUAAAACAAYAAAAJAAYAAAABAAYAAFALAAgAAAABAAYAAFANAAoAAAABAAYAAFARAAoAAAAAAAcAAAAPAAgAAAAAAAcAAAANAAYAAAAAAAcAAAALAAUAAAAAAAgAAAANAAcAAAAAAAgAAAAPAAkAAAAAAAgAAAANAAsAAAAEAAYAAAALAAkAAAAEAAYAAAAJAAcAAAAEAAYAAAAOAAsAAAABAAYAAAAPAAsAAAABAAYAAAAQAAsAAAABAAYAAAAMAAkAAAABAAYAAAAKAAcAAAABAAYAAAALAAcAAAACAAYAAAANAAkAAAACAAYAAAARAAsAAAADAAYAAAARAAkAAAADAAcAAAAPAAcAAAADAAcAAAANAAUAAAADAAcAAAAMAAUAAAABAAgAAAAOAAcAAAABAAgAAAAQAAkAAAABAAgAAAA=")
tile_set = SubResource("TileSet_5xkst")

[node name="PathLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAHAAEAAAAAAAAAAAAJAAEAAAACAAAAAAAIAAEAAAABAAAAAAAIAAIAAAABAAEAAAAIAAMAAAABAAEAAAAIAAQAAAABAAEAAAAJAAQAAAABAAEAAAAKAAQAAAABAAEAAAAKAAUAAAABAAEAAAAKAAYAAAABAAEAAAALAAYAAAABAAEAAAAMAAYAAAABAAEAAAAMAAcAAAABAAEAAAAMAAgAAAABAAEAAAANAAgAAAABAAEAAAAOAAgAAAABAAEAAAAOAAkAAAABAAEAAAAOAAoAAAABAAEAAAAPAAoAAAABAAEAAAAQAAoAAQAAAAAAAAAHAAIAAAABAAAAAGAHAAMAAAABAAAAAGAHAAQAAAABAAAAAGAHAAUAAAACAAAAADAIAAUAAAABAAAAADAJAAUAAAADAAAAAGAJAAYAAAAAAAEAAAAJAAcAAAACAAAAADAKAAcAAAABAAAAADALAAcAAAADAAAAAGALAAgAAAABAAAAAGALAAkAAAACAAAAADAMAAkAAAABAAAAADANAAkAAAADAAAAAGANAAoAAAABAAAAAGANAAsAAAACAAAAADAOAAsAAAABAAAAADAPAAsAAAABAAAAADAQAAsAAAABAAAAADARAAsAAAACAAAAAFARAAoAAAABAAAAAFARAAkAAAAAAAAAAFAQAAkAAAABAAAAAAAPAAkAAAAEAAAAAAAPAAgAAAABAAAAAFAPAAcAAAACAAAAAAAOAAcAAAABAAAAAAANAAcAAAAEAAAAAAANAAYAAAABAAAAAFANAAUAAAACAAAAAAAMAAUAAAABAAAAAAALAAUAAAAEAAAAAAALAAQAAAABAAAAAFALAAMAAAACAAAAAAAKAAMAAAABAAAAAAAJAAMAAAAEAAAAAAAJAAIAAAABAAAAAFA=")
tile_set = SubResource("TileSet_5xkst")

[node name="SandLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_5xkst")

[node name="PathAccentsLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAKAAYAAAAFAAEAAAAOAAgAAAAFAAAAAAAMAAQAAAAEAAgAAAAIAAQAAAAFAAEAAAAKAAQAAAAFAAEAAAAIAAMAAAAFAAAAAAAJAAQAAAAFAAAAAAAPAAsAAAAFAAcAAAA=")
tile_set = SubResource("TileSet_5xkst")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(3, 3)
process_callback = 0
script = ExtResource("5_t75r2")

[node name="inGameUI" parent="." instance=ExtResource("4_it2tc")]
anchors_preset = 14
anchor_left = 0.0
anchor_right = 1.0
offset_left = 64.0
offset_top = 192.0
offset_right = 64.0
offset_bottom = 192.0

[node name="BallPlayer" parent="." instance=ExtResource("4_jol72")]
position = Vector2(136, 40)
script = ExtResource("5_sps47")

[node name="Tween" type="Node" parent="BallPlayer"]

[node name="DeathSound1" type="AudioStreamPlayer2D" parent="BallPlayer"]
stream = ExtResource("8_v67rb")

[node name="DeathSound2" type="AudioStreamPlayer2D" parent="BallPlayer"]
stream = ExtResource("9_5xkst")

[node name="DeathSound3" type="AudioStreamPlayer2D" parent="BallPlayer"]
stream = ExtResource("10_t75r2")

[node name="WinSound1" type="AudioStreamPlayer2D" parent="BallPlayer"]
stream = ExtResource("11_ue1iy")

[node name="TransitionSound1" type="AudioStreamPlayer2D" parent="BallPlayer"]
stream = ExtResource("12_wrml1")

[node name="WallSound1" type="AudioStreamPlayer2D" parent="BallPlayer"]
stream = ExtResource("13_5xkst")
